--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,11 @@
     tools:context="com.example.zdyview.MainActivity">
 
     <com.example.zdyview.CircleImage
-        android:layout_width="327dp"
-        android:layout_height="365dp"
-        android:src="@drawable/smail"
-         />
-
-    <com.example.zdyview.BoLangView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp" />
+        android:layout_alignParentTop="true"
+        android:src="@drawable/smail" />
+
 </RelativeLayout>
