--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.zdyview.MainActivity">
 
-    <com.example.zdyview.CircleImage
+
+    <com.example.zdyview.MButton
         android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/smail" />
+        android:layout_height="50dp"
+        android:background="#e13232"/>
 
 </RelativeLayout>
